vbnc/vbnc/tests/Errors/30074.vb
Module bug
    Sub Main()
        For 1 = 1 To 2

        Next
    End Sub
End Module